Revert "Merge git://github.com/radekp/qgcide"
This reverts commit c398e956431bc2c7dd5282b73782b35967e4bbe7, reversing
changes made to 38df848d7ee4a31cdb6001c6f9f68933d64f090c.

Conflicts:

	src/3rdparty/games/qtcapra/neocontrol.h

--- a/src/3rdparty/games/qtcapra/qtcapra.desktop
+++ b/src/3rdparty/games/qtcapra/qtcapra.desktop
@@ -1,8 +1,11 @@
 [Desktop Entry]
-Name[]=qtcapra
 Comment[]=A Sgarbi emulator
 Exec=qtcapra
-Terminal=false
-Type=Application
-Categories=Game;
+Type=Games
+Name[]=qtcapra
 Icon=qtcapra/qtcapra
+MimeType=""
+MimeTypeIcons=""
+[Translation]
+File=QtopiaGames
+Context=qtcapra
